--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/dayjs": "^1.3.13",
+    "@material-ui/core": "4.12.3",
+    "@material-ui/lab": "4.0.0-alpha.60",
     "@mui/icons-material": "^5.0.0",
     "@mui/material": "^5.0.0",
     "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest",
@@ -12,8 +15,11 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "date-fns": "^2.25.0",
+    "dayjs": "^1.10.7",
     "eslint-config-prettier": "^8.3.0",
     "formik": "^2.2.9",
+    "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "prettier": "^2.3.2",
     "react": "^17.0.2",
@@ -22,8 +28,7 @@
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.1",
     "web-vitals": "^1.1.2",
-    "yup": "^0.32.9",
-    "jwt-decode": "^3.1.2"
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -48,5 +53,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@mui/lab": "^5.0.0-alpha.51"
   }
 }
